# OpenAIP

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT_GUIDE.html  DEPLOYMENT_GUIDE.md  README.md  REFACTORING_SUMMARY.md  REFACTOR_PLAN_LIB_CENTRAL.md  env.local.example  next.config.ts  package-lock.json  package.json  proxy.ts  render.yaml  skills-lock.json  sonar-project.properties  website-selected-tree.txt
aip-intelligence-pipeline/: .env.example  .gitignore  Dockerfile.api  Dockerfile.worker  README.md  categorization.py  docker-compose.yml  extraction.py  extraction_city.py  main.py  pyproject.toml  rag.py  rule_based_validation.py  summarization.py  supabase_client.py  validation_city.py  worker.py
aip-intelligence-pipeline/eval/: README.md  __init__.py  compare_strategy_runs.py  run_eval.py  validate_questions.py
aip-intelligence-pipeline/tests/: test_aip_line_items_ingestion.py  test_aip_totals_ingestion.py  test_artifact_contract_v11.py  test_categorization_prompt_wiring.py  test_chat_integration_conversational_intents.py  test_document_metadata_resolver.py  test_extraction_page_timeout.py  test_intent_api.py  test_intent_router_rules_first.py  test_intent_schema.py  test_line_item_embedding_text.py  test_rag_evidence_gate.py  test_rag_helpers.py  test_rag_hybrid_retrieval.py  test_rag_multi_query.py  test_rag_partial_evidence.py  test_resource_loading.py  test_rules_engine.py  test_semantic_classifier_basic.py  test_signatory_parser.py  test_smoke_imports.py  test_totals_extractor.py  test_upsert_projects_conflicts.py  test_validation_dynamic_chunking.py  (+2 more)
(+1965 files in other folders)
